Hero Section completata

--- a/view/index.html
+++ b/view/index.html
@@ -7,6 +7,10 @@
     <title>PRESTO</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- WR3-SChools CSS -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!-- WR3-SChools APIs -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- My CSS -->
     <link rel="stylesheet" href="/resource/css/style.css">
 </head>
@@ -14,8 +18,10 @@
 <body class="bg-light">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">PRESTO</a>
+        <div class="container-fluid ">
+            <a class="navbar-brand" href="#">
+                <img src="/media/img/svg/logo-text-black.svg" alt="Bootstrap" width="100" height="30">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -41,13 +47,34 @@
                             Explore
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#"><h6>Answers</h6><p>Powered by AI, answered by Fiverr freelancers</p></a></li>
-                            <li><a class="dropdown-item" href="#"><h6>Community</h6><p>Connect with PRESTO's team and community</p></a></li>
-                            <li><a class="dropdown-item" href="#"><h6>Guides</h6><p>In-depth guides covering business topics/p></a></li>
-                            <li><a class="dropdown-item" href="#"><h6>Podcast</h6><p>Inside tips from top business minds</p></a></li>
-                            <li><a class="dropdown-item" href="#"><h6>Learn</h6><p>Professional online courses, led by experts</p></a></li>
-                            <li><a class="dropdown-item" href="#"><h6>Blog</h6><p>News, infos and community stories</p></a></li>
-                            <li><a class="dropdown-item" href="#"><h6>Logo Maker</h6><p>Create your logo istantly</p></a></li>
+                            <li><a class="dropdown-item" href="#">
+                                    <h6>Answers</h6>
+                                    <p>Powered by AI, answered by Fiverr freelancers</p>
+                                </a></li>
+                            <li><a class="dropdown-item" href="#">
+                                    <h6>Community</h6>
+                                    <p>Connect with PRESTO's team and community</p>
+                                </a></li>
+                            <li><a class="dropdown-item" href="#">
+                                    <h6>Guides</h6>
+                                    <p>In-depth guides covering business topics/p>
+                                </a></li>
+                            <li><a class="dropdown-item" href="#">
+                                    <h6>Podcast</h6>
+                                    <p>Inside tips from top business minds</p>
+                                </a></li>
+                            <li><a class="dropdown-item" href="#">
+                                    <h6>Learn</h6>
+                                    <p>Professional online courses, led by experts</p>
+                                </a></li>
+                            <li><a class="dropdown-item" href="#">
+                                    <h6>Blog</h6>
+                                    <p>News, infos and community stories</p>
+                                </a></li>
+                            <li><a class="dropdown-item" href="#">
+                                    <h6>Logo Maker</h6>
+                                    <p>Create your logo istantly</p>
+                                </a></li>
                         </ul>
                     </li>
                     <!-- Lingua -->
@@ -66,13 +93,60 @@
         </div>
     </nav>
 
+    <!-- Header -->
+    <header class="d-flex justify-content-center align-items-center">
+
+
+        <!-- Hero Section -->
+        <div class="card-wrapper pt-4 ps-5" style="width: 1000px; height: 520px;">
+            <!-- Bg-Image -->
+            <div class="bg-image hover-overlay ripple d-flex position-relative" data-mdb-ripple-color="light"
+                style="width: 100%; height: 100%;">
+                <img src="/media/img/hero-bg.png" class="img-fluid rounded"
+                    style="width: 100%; height: 100%; object-fit: cover;">
+                <a href="#!">
+                    <div class="mask" style="background-color: rgba(255, 255, 255, 0.3)"></div>
+                </a>
+                <!-- Div-Over-Bg -->
+                <div
+                    class="content position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center p-4">
+                    <!-- Titolo -->
+                    <h1 class="text-white mb-3">Scale your Professional Workforce with Freelancers</h1>
+                    <!-- SearchBar -->
+                    <form class="d-flex mb-3" role="search" style="max-width: 500px; width: 100%;">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-light" type="submit">Search</button>
+                    </form>
+                    <!-- Collabo -->
+                    <div class="Collabo">
+                        <p class="text-white mt-auto">Powered by:</p>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img src="/media/img/svg/meta-dgray.svg" alt="Meta" class="me-3"
+                                style="width: 50px; height: 50px;">
+                            <img src="/media/img/svg/google-dgray.svg" alt="Google" class="me-3"
+                                style="width: 50px; height: 50px;">
+                            <img src="/media/img/svg/netflix-dgray.svg" alt="Netflix" class="me-3"
+                                style="width: 50px; height: 50px;">
+                            <img src="/media/img/svg/pg-dgray.svg" alt="P&G" class="me-3"
+                                style="width: 50px; height: 50px;">
+                            <img src="/media/img/svg/paypal-dgray.svg" alt="PayPal" class="me-3"
+                                style="width: 50px; height: 50px;">
+                            <img src="/media/img/svg/payoneer-dgray.svg" alt="Payoneer" class="me-3"
+                                style="width: 50px; height: 50px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
 
 
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- My JS -->
-    <script src="/resource/js/main.js"></script>
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- My JS -->
+        <script src="/resource/js/main.js"></script>
 </body>
 
 </html>
