--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -1,3 +1,4 @@
+    /* Hero Section */
     .card-container .card {
         width: 220px;
         height: 210px;
@@ -27,4 +28,88 @@
         overflow: visible;
         text-align: center;
     }
-    
+
+    /* Carousel */
+    .scroll-container {
+        width: 20;
+        overflow: hidden;
+        position: absolute;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .scroll-wrapper {
+        display: flex;
+        animation: scroll 10s linear infinite;
+        gap: 20px;
+    }
+
+    .card {
+        flex: 0 0 auto;
+        width: 200px;
+        height: 150px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Animazione scorrimento */
+    @keyframes scroll {
+        0% {
+            transform: translateX(0);
+        }
+
+        100% {
+            transform: translateX(-100%);
+        }
+    }
+
+
+    .scroll-container {
+        width: 400px;
+        height: 400px;
+        border: 4px solid #ff0000;
+        border-radius: 12px;
+        overflow: hidden;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .scroll-container div {
+        width: auto;
+        height: 250px;
+        border-radius: 12px;
+        overflow: hidden;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .scroll-wrapper {
+        display: flex;
+        animation: smooth-scroll 5s linear infinite;
+        gap: 20px;
+    }
+
+    .card {
+        flex: 0 0 auto;
+        width: 200px;
+        height: 400px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Animazione scorrevole continua */
+    @keyframes smooth-scroll {
+        0% {
+            transform: translateX(0);
+        }
+
+        100% {
+            transform: translateX(calc(-200px * 3 - 60px));
+        }
+    }
