--- a/view/index.html
+++ b/view/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRESTO</title>
+    <!-- AOS CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- WR3-SChools CSS -->
@@ -123,7 +125,7 @@
                 <!-- Div-Over-Bg -->
                 <div class="content position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center m-5"
                     style="padding-top: 100px;">
-                    <!-- Titolo -->
+                    <!-- Title -->
                     <h1 class="text-light w-100 justify-content-center">Scale your Professional <span
                             style="color: #194051;">Workforce
                             with Freelancers</span></h1>
@@ -157,66 +159,67 @@
     </header>
 
     <!-- Cards's Row -->
-    <section class="firstsection pt-2 m-4 container-fluid justify-content-center align">
-        <div class="card-container cont d-flex justify-content-center flex-wrap gap-4">
+    <section class="firstsection pt-2 m-3 container-fluid d-flex justify-content-center">
+        <div class="card-container row gap-4 justify-content-center" style="max-width: 2000px;">
             <!-- Card 1 -->
-            <div class="card text-center p-5 border-0 shadow" style="width: 220px;">
+            <div class="card col-6 col-sm-4 col-md-3 col-lg-2 text-center p-5 border-0 shadow" data-aos="fade-up"
+                data-aos-duration="800" data-aos-delay="100">
                 <div class="icon-placeholder mb-3 ps-2" style="font-size: 50px; color: #6c757d;">
                     <span><img src="/media/svg/cards/card-1.svg" style="width: 60px; height: 60px;"></span>
                 </div>
                 <p class="fw-bold">Consegna Standard</p>
             </div>
             <!-- Card 2 -->
-            <div class="card text-center p-5 border-0 shadow" style="width: 220px;">
-                <div class="icon-placeholder mb-3 pe-2" style="font-size: 50px; color: #6c757d;">
-                    <span><img src="/media/svg/cards/card-2.svg" style="width: 60px; height: 60px;"></span>
-                </div>
-                <p class="fw-bold">Consegna Espresso</p>
-            </div>
-            <!-- Card 3 -->
-            <div class="card text-center p-5 border-0 shadow" style="width: 220px;">
+            <div class="card text-center p-5 border-0 shadow" data-aos="fade-up" data-aos-duration="800"
+                data-aos-delay="200" style="width: 220px;">
                 <div class="icon-placeholder mb-3 ps-2" style="font-size: 50px; color: #6c757d;">
                     <span><img src="/media/svg/cards/card-3.svg" style="width: 60px; height: 60px;"></span>
                 </div>
                 <p class="fw-bold">Consegna Internazionale</p>
             </div>
-            <!-- Card 4 -->
-            <div class="card text-center p-5 border-0 shadow" style="width: 220px;">
+            <!-- Card 3 -->
+            <div class="card text-center p-5 border-0 shadow" data-aos="fade-up" data-aos-duration="800"
+                data-aos-delay="300" style="width: 220px;">
                 <div class="icon-placeholder mb-3" style="font-size: 50px; color: #6c757d;">
                     <span><img src="/media/svg/cards/card-4.svg" style="width: 60px; height: 60px;"></span>
                 </div>
                 <p class="fw-bold">Consegne Aziendali</p>
             </div>
-            <!-- Card 5 -->
-            <div class="card text-center p-5 border-0 shadow" style="width: 220px;">
+            <!-- Card 4 -->
+            <div class="card text-center p-5 border-0 shadow" data-aos="fade-up" data-aos-duration="800"
+                data-aos-delay="400" style="width: 220px;">
                 <div class="icon-placeholder mb-3" style="font-size: 50px; color: #6c757d;">
                     <span><img src="/media/svg/cards/card-5.svg" style="width: 60px; height: 60px;"></span>
                 </div>
                 <p class="fw-bold">Consegna a Domicilio</p>
             </div>
-            <!-- Card 6 -->
-            <div class="card text-center p-5 border-0 shadow" style="width: 220px;">
+            <!-- Card 5 -->
+            <div class="card text-center p-5 border-0 shadow" data-aos="fade-up" data-aos-duration="800"
+                data-aos-delay="500" style="width: 220px;">
                 <div class="icon-placeholder mb-3" style="font-size: 50px; color: #6c757d;">
                     <span><img src="/media/svg/cards/card-6.svg" style="width: 60px; height: 60px;"></span>
                 </div>
                 <p class="fw-bold">Consegna al Ritiro</p>
             </div>
-            <!-- Card 7 -->
-            <div class="card text-center p-5 border-0 shadow" style="width: 220px;">
+            <!-- Card 6 -->
+            <div class="card text-center p-5 border-0 shadow" data-aos="fade-up" data-aos-duration="800"
+                data-aos-delay="600" style="width: 220px;">
                 <div class="icon-placeholder mb-3" style="font-size: 50px; color: #6c757d;">
                     <span><img src="/media/svg/cards/card-7.svg" style="width: 60px; height: 60px;"></span>
                 </div>
                 <p class="fw-bold">Consegna Oggetti Fragili</p>
             </div>
-            <!-- Card 8 -->
-            <div class="card text-center p-5 border-0 shadow" style="width: 220px;">
+            <!-- Card 7 -->
+            <div class="card text-center p-5 border-0 shadow" data-aos="fade-up" data-aos-duration="800"
+                data-aos-delay="700" style="width: 220px;">
                 <div class="icon-placeholder mb-3" style="font-size: 50px; color: #6c757d;">
                     <span><img src="/media/svg/cards/card-8.svg" style="width: 60px; height: 60px;"></span>
                 </div>
                 <p class="fw-bold">Consegna con Firma al Ritiro</p>
             </div>
-            <!-- Card 9 -->
-            <div class="card text-center p-5 border-0 shadow" style="width: 220px;">
+            <!-- Card 8 -->
+            <div class="card text-center p-5 border-0 shadow" data-aos="fade-up" data-aos-duration="800"
+                data-aos-delay="800" style="width: 220px;">
                 <div class="icon-placeholder mb-3" style="font-size: 50px; color: #6c757d;">
                     <span><img src="/media/svg/cards/card-9.svg" style="width: 60px; height: 60px;"></span>
                 </div>
@@ -225,6 +228,53 @@
         </div>
     </section>
 
+    <!-- Carousel -->
+    <section class="second-section d-flex justify-content-center align-items-center">
+        <div class="scroll-container">
+            <div class="scroll-wrapper">
+                <div class="scroll-container">
+                    <div class="scroll-wrapper">
+                        <div class="c-card text-center p-3 shadow">
+                            <div class="icon-placeholder mb-3">
+                                <span><img src="/media/svg/cards/card-1.svg" style="width: 60px; height: 60px;"></span>
+                            </div>
+                            <p class="fw-bold">Consegna Standard</p>
+                        </div>
+                        <div class="c-card text-center p-3 shadow">
+                            <div class="icon-placeholder mb-3">
+                                <span><img src="/media/svg/cards/card-2.svg" style="width: 60px; height: 60px;"></span>
+                            </div>
+                            <p class="fw-bold">Consegna Internazionale</p>
+                        </div>
+                        <div class="c-card text-center p-3 shadow">
+                            <div class="icon-placeholder mb-3">
+                                <span><img src="/media/svg/cards/card-3.svg" style="width: 60px; height: 60px;"></span>
+                            </div>
+                            <p class="fw-bold">Consegne Aziendali</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- AOS JS -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -233,30 +283,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- //////////////////////////////////////
-    //////  SONO IN PAUSA/////////////////
-   ////////////////////////////////////// -->
